@@ -35,7 +35,7 @@ public enum SubSkillType {
     /* CROSSBOWS */
     CROSSBOWS_SUPER_SHOTGUN(1),
     CROSSBOWS_CROSSBOWS_LIMIT_BREAK(10),
-    CROSSBOWS_TRICK_SHOT(5),
+    CROSSBOWS_TRICK_SHOT(3),
 
     /* Excavation */
     EXCAVATION_ARCHAEOLOGY(8),
